<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgetPasswordActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_header"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abl_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnGetVerification"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="@drawable/button_bg"
        android:elevation="@dimen/_7sdp"
        android:text="@string/get_code"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/otpText"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/otpText"
        app:layout_constraintTop_toBottomOf="@+id/tilUserName" />


    <com.example.awscognito.otpedittext2.OtpEditText
        android:id="@+id/otpText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:clickable="false"
        android:cursorVisible="false"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_21ssp"
        app:layout_constraintEnd_toEndOf="@+id/tilUserName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tilUserName"
        app:layout_constraintTop_toBottomOf="@+id/btnGetVerification"
        app:oev_primary_color="@color/colorAccent"
        app:oev_secondary_color="@color/light_gray" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="@+id/otpText"
        app:layout_constraintStart_toStartOf="@+id/otpText"
        app:layout_constraintTop_toBottomOf="@+id/otpText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:elevation="@dimen/_7sdp"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />





</androidx.constraintlayout.widget.ConstraintLayout>